# icecream

./: .gitignore  README.md  hello.py  icecream-p1-eda.ipynb  icecream-p2-ingredients.ipynb  icecream.ipynb  pyproject.toml  render.yaml  requirements.txt
data/: edaicecream_head.csv
data/eda/: icecream2_bot10_tl.csv  icecream2_diff_table_tl.csv  icecream2_top10_tl.csv  icecream_bot10_bj.csv  icecream_bot10_br.csv  icecream_bot10_hd.csv  icecream_bot10_tl.csv  icecream_low_rating_count.csv  icecream_tail.csv  icecream_top10_bj.csv  icecream_top10_br.csv  icecream_top10_hd.csv  icecream_top10_tl.csv  icecream_top10bot10grouped.csv  icecream_worst10_1star_reviews.csv  icecream_worst10_negative_reviews.csv  icecream_worst_flavors.csv
data/model/: best_svr_model.joblib  colunas_modelo.joblib  common_ingredients.pkl  ice_cream_brands.pkl  ice_cream_model_pipeline.joblib  svr_scaler.pkl
front/: main.py  teste.py  utils.py
notebooks/: icecream-p1-eda.ipynb  icecream-p2-ingredients.ipynb  icecream-p3-model.ipynb
